--- a/TranspoLink/Views/Account/UpdatePassword.cshtml
+++ b/TranspoLink/Views/Account/UpdatePassword.cshtml
@@ -37,7 +37,7 @@
             <button type="submit" class="auth-submit-btn">Update Password</button>
 
             <div style="margin-top: 20px;">
-                <a href="/Account/UpdateProfile" class="auth-link">Cancel & Go Back</a>
+                <a href="/Account/ProfileManage" class="auth-link">Cancel & Go Back</a>
             </div>
         </form>
     </div>
